@@ -3,36 +3,34 @@ package streams;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 public class Read {
 
     private List<Book> books = new ArrayList<>();
 
-    public void addBook(Book newBook) {
-        books.add(newBook);
+    public void addBook(Book book) {
+        books.add(book);
     }
 
     public List<String> listBookTitlesShorterThanGiven(int maxNumberOfPages) {
         return books.stream()
-                .filter(book -> book.getPages() <= maxNumberOfPages)
+                .filter(b -> b.getNumberOfPages() <= maxNumberOfPages)
                 .map(Book::getTitle)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> listBookTitlesWithGivenAuthor(String author) {
         return books.stream()
-                .filter(book -> book.getAuthor().equals(author))
+                .filter(b -> b.getAuthor().equals(author))
                 .map(Book::getTitle)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<String> listAuthors() {
         return books.stream()
                 .map(Book::getAuthor)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
